--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,9 @@
         android:id="@+id/navigation_home"
         android:name="com.example.lifecircle20.ui.home.HomeFragment"
         android:label="Login"
-        tools:layout="@layout/fragment_home">
-        <action
-        android:id="@+id/navigate_to_navigation_dashboard"
-        app:destination="@id/navigation_dashboard"/>
-</fragment>
+        tools:layout="@layout/fragment_home"/>
 
-<fragment
+    <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.lifecircle20.ui.dashboard.DashboardFragment"
         android:label="Input Form"
@@ -26,4 +22,5 @@
         android:name="com.example.lifecircle20.ui.notifications.NotificationsFragment"
         android:label="Saved Input"
         tools:layout="@layout/fragment_notifications" />
+
 </navigation>
